🔧 Setup GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+"homepage": "https://sneha5500.github.io/portfolio",
 {
   "name": "portfolio",
   "version": "0.1.0",
@@ -19,6 +20,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
