--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-"homepage": "https://sneha5500.github.io/portfolio",
 {
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sneha5500.github.io/portfolio",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -19,10 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-     "deploy": "gh-pages -d build"
-
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,3 +45,4 @@
     "gh-pages": "^6.3.0"
   }
 }
+
